# grin-pool

./: .gitignore  README.md
ansible/roles/pool/files/: tidyWallet.yaml
bitgrin/: Dockerfile  Makefile  run-wallet.sh  run.sh  stratumserver.rs
grin-py/: Dockerfile
grin-py/api/: BGP_payout.py  api.py
grin-py/grinbase/model/: pool_blocks.py  pool_stats.py  pool_utxo.py  worker_shares.py
grin-py/grinlib/: grin.py  grinstats.py  lib.py  pool.py  poolstats.py  workerstats.py
grin-py/mwdockerbase/: Makefile
grin-py/services/: config.ini  paymentEstimator.py  paymentMaker.py  poolStats.py  shareAggr.py
grin-py/utils/: credit_user.py  populate_redis.py
grin-py/webui-js/public/: index.html
grin-py/webui-js/src/app/: Router.js
grin-py/webui-js/src/containers/About/: About.js
grin-py/webui-js/src/containers/Instructions/: Instructions.js
grin-py/webui-js/src/containers/MinerPayment/: MinerPayment.js  MinerPaymentData.js
grin-py/webui-js/src/custom/: custom.scss
kube/: grin-hd_set.yaml  grin_set.yaml  grinwallet.yaml  makePayouts.yaml  nginx_bitgrinmining.yaml  paymentEstimator.yaml  paymentMaker.yaml  stratum-hd.yaml  stratum.yaml
logstash/: poolblockfilter.conf  sharefilter.conf
nginx/: Dockerfile
nginx/src/: bitgrinpool.http.conf  bitgrinpool.stream.conf
rmq/: Dockerfile  definitions.json
splunk/: Makefile
stratum/: Cargo.toml  Dockerfile  Dockerfile.htm  grin-pool.toml
stratum/src/: main.rs
stratum/src/pool/: config.rs  consensus.rs  logger.rs  mod.rs  pool.rs  proto.rs  server.rs  util.rs  worker.rs
(+1 files in other folders)
